# orb_slam3

./: .gitignore  CMakeLists.txt  ORBextractor.cc  ORBextractor.h  README.md  config.json  important_links.txt  main.cpp
DBoW2/: CMakeLists.txt  build.sh
DBoW2/DBoW2/: TemplatedVocabulary.h
DBoW2/cmake/: Config.cmake.in
drawer/: CMakeLists.txt  drawer.cpp  drawer.h  drawer_impl.cpp  drawer_impl.h  edge.cpp  edge.h  graph.cpp  graph.h  key_frame_details.cpp  key_frame_details.h  key_frame_node.cpp  key_frame_node.h  map_point_node.cpp  map_point_node.h  node.cpp  node.h  objects_buffer.h
drawer/shaders/: color_repository.cpp  color_repository.h  frame_fragment_shader.h  key_frame_fragment_shader.h  shader_repository.cpp  shader_repository.h  vertex_shader.h
orb_slam3/: CMakeLists.txt
orb_slam3/include/: constants.h  icamera.h  identifiable.h  image_utils.h  local_mapper.h  map.h  map_point.h  observable.h  observer.h  position_observer.h  tracker.h  tracking_result.h  typedefs.h
orb_slam3/include/camera/: fish_eye.h  icamera.h  idistortion_model.h  kannala_brandt_5.h  kannala_brandt_8.h  monocular_camera.h  rgbd_camera.h
orb_slam3/include/debug/: debug_utils.h
orb_slam3/include/feature_extraction/: ifeature_extractor.h  orb_feature_extractor.h
orb_slam3/include/features/: bow_container.h  bow_matcher.h  feature_utils.h  features.h  ifeature_extractor.h  imatcher.h  key_point.h  match.h  orb_feature_extractor.h  second_nearest_neighbor_matcher.h
orb_slam3/include/frame/: frame_base.h  (+10 more)
orb_slam3/src/: atlas.cpp  identifiable.cpp  local_mapper.cpp  logging.cpp  map.cpp  tracker.cpp
src/: CMakeLists.txt  atlas.cpp  constants.h  frame_base.cpp  identifiable.h  image_utils.h  local_mapper.cpp  local_mapper.h  logging.cpp  logging.h  loop_merge_detector.cpp  loop_merge_detector.h  map.cpp  map_point.cpp  observable.h  observer.h  orb_feature_extractor.cpp  orb_vocabulary.h  pinhole_camera.cpp  position_observer.h  profiler.cpp  profiler.h  rgbd_camera.cpp  rgbd_frame.cpp  settings.cpp  settings.h  tracker.cpp  tracker.h  tracking_result.h  typedefs.h
src/camera/: camera_type.h  fish_eye.cpp  fish_eye.h  icamera.h  idistortion_model.h  kannala_brandt_5.cpp  kannala_brandt_5.h  kannala_brandt_8.cpp  kannala_brandt_8.h  monocular_camera.cpp  monocular_camera.h  rgbd_camera.h
src/cmake/: Config.cmake.in
src/debug/: debug_utils.cpp  debug_utils.h
src/factories/: camera_factory.cpp  camera_factory.h  distortion_model_factory.cpp  distortion_model_factory.h  feature_extractor_factory.cpp  feature_extractor_factory.h  feature_handler_factory.cpp  feature_handler_factory.h  frame_factory.cpp  frame_factory.h  key_frame_factory.cpp  key_frame_factory.h  keyframe_database_factory.cpp  keyframe_database_factory.h
src/features/: bow_container.cpp  bow_container.h  bow_vocabulary.h  feature_extractor_type.h  features.cpp  features.h  ifeature_extractor.h  key_point.cpp  key_point.h  match.h  orb_feature_extractor.cpp  orb_feature_extractor.h
src/frame/: base_frame.cpp  base_frame.h  covisibility_graph_node.cpp  covisibility_graph_node.h  frame.cpp  frame.h  frame_base.cpp  frame_base.h  frame_type.h  iframe_database.h  ikey_frame_database.h  key_frame.cpp  key_frame.h  key_frame_database.cpp  key_frame_database.h  map_point_visibility_params.h  monocular_frame_old.cpp  monocular_frame_old.h  monocular_observation.cpp  monocular_observation.h  observation.cpp  observation.h  rgbd_frame.cpp  rgbd_frame.h  sensor_constants.cpp  sensor_constants.h  visible_map_point.h
src/geometry/: essential_matrix_estimator.cpp  essential_matrix_estimator.h  homography_matrix_estimator.cpp  homography_matrix_estimator.h  pose.cpp  pose.h  random_subset_generator.cpp  random_subset_generator.h  ransac_sim3_solver.cpp  ransac_sim3_solver.h  rigid_object.h  sim3_solver.cpp  sim3_solver.h  sim3_transformation.cpp  sim3_transformation.h  transformation_estimator_base.cpp  transfromation_estimator_base.h  two_view_reconstructor.cpp  two_view_reconstructor.h  utils.cpp  utils.h
src/map/: atlas.cpp  atlas.h  map.cpp  map.h  map_point.cpp  map_point.h
src/messages/: base_message.cpp  base_message.h  key_frame_covisibility_updated.cpp  key_frame_covisibility_updated.h  key_frame_created.cpp  key_frame_created.h  key_frame_deleted.cpp  key_frame_deleted.h  key_frame_position_updated.cpp  key_frame_position_updated.h  map_created.cpp  map_created.h  map_point_created.cpp  map_point_created.h  map_point_deleted.cpp  map_point_deleted.h  map_point_geometry_updated.cpp  map_point_geometry_updated.h  message_processor.cpp  message_processor.h  message_type.cpp  message_type.h  messages.h  observation_added.cpp  observation_added.h  observation_deleted.cpp  observation_deleted.h  position_predicted.cpp  position_predicted.h  serialization_utils.cpp  serialization_utils.h  tracking_info.cpp  tracking_info.h
src/optimization/: bundle_adjustment.cpp  bundle_adjustment.h  monocular_optimization.cpp  monocular_optimization.h  utils.cpp  utils.h
src/serialization/: deserializer.cpp  deserializer.h  serialization_context.cpp  serialization_context.h  serializer.cpp  serializer.h
src/utils/: thread_safe_queue.h
test/: CMakeLists.txt  CMakeLists.txt.in  test_utils.cpp  test_utils.h
test/features/: bow_match_iterator_tests.cpp  bow_match_iterator_tests.h  feature_tests.cpp  feature_tests.h  fish_eye_tests.cpp  fish_eye_tests.h  projection_search_iterator_tests.cpp  projection_search_iterator_tests.h
test/frame/: frame_base_tests.cpp  frame_base_tests.h  monocular_frame_tests.cpp  monocular_frame_tests.h
test/geometry/: essential_estimator_tests.cpp  essential_estimator_tests.h  general_geometry_tests.cpp  general_geometry_tests.h  homography_estimator_tests.cpp  homography_estimator_tests.h  sim3_solver_tests.cpp  sim3_solver_tests.h  sim_3_pose_tests.cpp  sim_3_pose_tests.h  test_utils.cpp  test_utils.h  utils_tests.cpp  utils_tests.h
test/mock/: mock_feature_extractor.h  mock_frame.h  mock_frame_base.h
test/optimization/: se3_project_xyz_pose_tests.cpp  se3_project_xyz_pose_tests.h
(+189 files in other folders)
